--- a/Sandbox/Sandbox/stylesheets/venobox.css
+++ b/Sandbox/Sandbox/stylesheets/venobox.css
@@ -20,6 +20,9 @@ body{
     -moz-transition: opacity .25s ease-in-out;
     -webkit-transition: opacity .25s ease-in-out;
 }
+.vbox-overlay .custom-overlay {
+    background: #b6ff00;
+}
 .relativo{
     float: left;
     width: 100%;
@@ -232,10 +235,11 @@ body{
     text-align: center;
     line-height: 28px;
     font-size: 12px;
-    color: #fff;
+    color: #428bca;
     padding: 6px 40px;
     overflow: hidden;
     background: #161617;
+    background: none;
     position: fixed;
     display: none;
     top: -1px;
@@ -261,7 +265,9 @@ body{
 /* ------- inline window ------ */
 .vbox-inline{
     width: 420px;
+   width: 100%;
     height: 315px;
+    height: auto;
     padding: 10px;
     background: #fff;
     text-align: left;
