--- a/Sandbox/Sandbox/stylesheets/main.css
+++ b/Sandbox/Sandbox/stylesheets/main.css
@@ -724,7 +724,9 @@ h1,h2,h3,h4,h5,h6{
 	padding-top: 0px;
 	padding-bottom: 0px;
 	margin-top: 60px;
+    margin-top: 0px;/*tosca*/
 	margin-bottom: 60px;
+    margin-bottom: 0px;/*tosca*/
 }
 .showcase-single-content h5{
 	font-weight: 600;
