--- a/Sandbox/Sandbox/stylesheets/venobox.css
+++ b/Sandbox/Sandbox/stylesheets/venobox.css
@@ -20,9 +20,12 @@ body{
     -moz-transition: opacity .25s ease-in-out;
     -webkit-transition: opacity .25s ease-in-out;
 }
-.vbox-overlay .custom-overlay {
-    background: #b6ff00;
+
+.custom-overlay {
+    width: 700px;
+    display: block !important;
 }
+
 .relativo{
     float: left;
     width: 100%;
