--- a/Sandbox/Sandbox/stylesheets/main.css
+++ b/Sandbox/Sandbox/stylesheets/main.css
@@ -436,6 +436,9 @@ h1,h2,h3,h4,h5,h6{
 	background-position: center center;
 	background-size: cover;
 }
+.showcase-thumb-strip img {
+  padding-bottom: 25px;
+}
 .showcases-overlay{
 	opacity: 0;
 	background-color: rgba(0,0,0,0.8);
