--- a/Sandbox/Sandbox/stylesheets/venobox.css
+++ b/Sandbox/Sandbox/stylesheets/venobox.css
@@ -25,6 +25,9 @@ body{
     width: 700px;
     display: block !important;
 }
+.custom-overlay-6  {
+    width:480px;
+}
 
 .relativo{
     float: left;
@@ -273,9 +276,9 @@ body{
     height: auto;
     padding: 10px;
     background: #fff;
-    text-align: left;
+    text-align: center;
     margin: 0 auto;
-    overflow: auto;
+  /*  overflow: auto;*/
 }
 
 /* ------- Video & iFrames window ------ */
