--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -1,18 +1,65 @@
-﻿@{
+﻿@{ 
     ViewBag.Title = "Natalie Macellaio | Metal Sculptor";
 }
-@section featured {
-    <section class="featured">
-        <div class="content-wrapper ">
+<section class="intro-02-wrap page-section featured" id="home">
+    <div class="container-fluid">
+        <div class="row">
+            <div id="works-container" class="works-container white-bg clearfix">
 
-            <hgroup class="title">
-                <h1>@ViewBag.Title.</h1>
-                <h2>@ViewBag.Message</h2>
-            </hgroup>
-            
-            <p>This is a website for Natalie </p>
+                <!-- start : works-item-scribbles -->
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="scribbles collection" class="img-responsive" src="~/images/scribbles/scrib-01.jpg" />
+                    <a class="venobox" data-overlay="#ca294b" data-gall="portfolio-gallery" data-type="inline" href="~/Views/Scribbles.cshtml">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">New Work</h3>
+                            <p class="white"><span class="black-bg">Scribbles</span></p>
+                        </div>
+                    </a>
+                </div>
+                <!-- end : works-item-kidsrings -->
+                <!-- start : works-item -->
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="kids rings collection" class="img-responsive" src="~/images/kidsrings/kring-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="inline" href="~/#kids-rings">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">New Work</h3>
+                            <p class="white"><span class="black-bg">Kids Rings</span></p>
+                        </div>
+                    </a>
+                </div>
+                <!-- end : works-item -->
+                <!-- start : works-item  -->
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="New Work" class="img-responsive" src="~/images/scribbles/scrib-02.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" title="Yellow and Blue" href="~/images/scribbles/scrib-02.jpg">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">New Work</h3>
+                            <p class="white"><span class="black-bg">Toddler Scribbles</span></p>
+                        </div>
+                    </a>
+                </div>
+                <!-- end : works-item -->
+                <!-- start : works-item the motherload project-->
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="Collaborations" title="The Motherload Project" class="img-responsive" src="~/images/motherload/motherload-02.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" data-slide-index="#motherload" href="~/Views/Home/TheMotherLoadProject.cshtml">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Collaborations</h3>
+                            <p class="white"><span class="black-bg">The Motherload Project</span></p>
+                        </div>
+                    </a>
+                </div>
+                <!-- end : works-item -->
+
+
+
+            </div>
+            <!-- end : works-container -->
+
         </div>
-    </section>
-}
+
+    </div>
+</section>
+
 
 
