--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -1,52 +1,182 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>@ViewBag.Title</title>     
         <meta charset="utf-8" />
-        <title>@ViewBag.Title - Natalie Macellaio - MetalSmith</title>
-        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <meta name="viewport" content="width=device-width" />
-        @Styles.Render("~/Content/css")
-        @Scripts.Render("~/bundles/modernizr")
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta content='all' name='robots' />
+        <meta name="description" content="Natallie Macellaio is a Silversmith and Metal Artist working and teaching near Dallas, Texas" />
+        <meta name="keywords" content="Natalie Macellaio" />
+        <meta name="author" content="tosca ragnini" />
+        <!-- if you are going to support IE -->
+        <!--[if IE]> <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'> <![endif]-->
+        <link rel="shortcut icon" href="~/images/favicon/favicon.ico">
+        <link rel="apple-touch-icon" sizes="57x57" href="~/images/touchicons/apple-touch-icon-57-precomposed" />
+        <link rel="apple-touch-icon" sizes="114x114" href="~/assets/touchicons/apple-touch-icon-114-precomposed" />
+        <link rel="apple-touch-icon" sizes="72x72" href="~/assets/touchicons/apple-touch-icon-72-precomposed" />
+        <link rel="apple-touch-icon" sizes="144x144" href="~/assets/touchicons/apple-touch-icon-144-precomposed" />
+        <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet">
+        <link href="~/fonts/fonts.css" rel="stylesheet">
+        <!--<link href="~/stylesheets/pace.preload.css" rel="stylesheet">-->
+        <link href="~/stylesheets/slimmenu.css" rel="stylesheet" type="text" />
+        <link href="~/stylesheets/venobox.css" rel="stylesheet" type="text" />
+        <link href="~/stylesheets/jquery.tweet.css" rel="stylesheet" type="text" />
+        <link href="~/stylesheets/navmenu.css" rel="stylesheet" type="text" />
+        <link href="~/stylesheets/jquery.bxslider.css" rel="stylesheet" type="text" />
+        <link href="~/stylesheets/isotope.css" rel="stylesheet" type="text" />
+        <link href="~/stylesheets/intro02.css" rel="stylesheet" type="text" />
+        <link href="~/stylesheets/main.css" rel="stylesheet" type="text" />
+        <link href="~/stylesheets/main-responsive.css" rel="stylesheet" type="text" />
+        <link href="~/stylesheets/main-retina.css" rel="stylesheet" type="text" />
+        <link rel="~/stylesheet/less" type="text/css" href="less/color.less" />
+        <link rel="~/stylesheet/less" type="text/css" href="less/fonts.less" />
+        <script src="~/less/less-2.0.0.min.js"></script>
+        <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,900%7COpen+Sans:400,300,700,800%7CMontserrat:400,700%7CCrimson+Text:400,700,400italic,700italic%7CLekton:400,700' rel='stylesheet' type='text/css'>
+       <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+      <script src="bootstrap/js/html5shiv.js"></script>
+      <script src="bootstrap/js/respond.min.js"></script>
+      <![endif]-->
     </head>
-    <body>
-        <header>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p class="site-title">
-                        <a href="@Html.ActionLink("FCfit","Index", "Home")">
-                         <!--  <img src="@Url.Content("~/Images/FCfit-logo.png")" />-->
-                        </a>                   
-                    </p>
-                </div>
-                <div class="float-right">
-                    <section id="login">
-                        @Html.Partial("_LoginPartial")
-                    </section>
-                    <nav>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        </ul>
-                    </nav>
+    <body class=" whitegray-bg">
+        <div class="sticky-panel sticky-panel-top white-bg"></div>
+        <div class="sticky-panel sticky-panel-right white-bg"></div>
+        <div class="sticky-panel sticky-panel-bottom white-bg"></div>
+        <header class="masthead visible-lg white-bg">
+            <div class="main-logo-wrap">
+                <img alt="" title="" src="~/images/logo.png" />
+            </div>
+            <div class="main-nav">
+                <div class="mobile-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
-        </header>
-        <div id="body">
-            @RenderSection("featured", required: false)
-            <section class="content-wrapper main-content clear-fix">
-                @RenderBody()
-            </section>
-        </div>
-        <footer>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
-                </div>
+            <img alt="" title="" class="side-logo" src="~/images/side-logo.png" />
+            <div class="nav-bio">
+                <h4><span class="black color-bg font5">Natalie Macellaio 3D Metal Sculptor</span></h4>
             </div>
-        </footer>
+            <nav class="nav-item-wrap">
+                <ul class="main-nav-menu main-nav-menu-effect">
 
-        @Scripts.Render("~/bundles/jquery")
-        @RenderSection("scripts", required: false)
-    </body>
+                    <li class="trigger-sub-nav">
+                        <a class="main-nav-link" href="/Index">home</a>
+                    </li>
+
+                    <li class="trigger-sub-nav">
+                        <a class="main-nav-link" href="#">work</a>
+                        <div class="sub-nav">
+                            <a href="/Scribbles">Scribbles</a>
+                            <a href="/Kids-Rings#kidsrings">Kids-Rings</a>
+                        </div>
+                    </li>
+                    <li class="trigger-sub-nav">
+                        <a class="main-nav-link" href="#">collaborations</a>
+                        <div class="sub-nav">
+                            <a href="/The-Mother-Load-Project">The Motherload Project</a>
+                            <a href="#wannabe">Wannabe</a>
+                            <a href="#petite">Petite Show</a>
+                            <a href="#merger">The Merger</a>
+                            <a href="#trestle">Trestle Designs</a>
+                        </div>
+                    </li>
+                    <li class="trigger-sub-nav">
+                        <a class="main-nav-link" href="#">about</a>
+                        <div class="sub-nav">
+                            <a href="#about">my bio</a>
+                            <a href="#contact">contact me</a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+
+            <!-- social icons-->
+            <ul class="social-wrap">
+                <li><a href="#"><img alt="" title="" src="~/images/social/01.png" /></a></li>
+            </ul>
+
+
+        </header>
+
+        <!-- mobile only navigation : starts -->
+        <nav class="mobile-nav hidden-lg">
+            <ul class="slimmenu">
+                <li>
+                    <a class="sub-collapser" href="/Index">home</a>
+                </li>
+
+                <li>
+                    <a class="sub-collapser" href="">work</a>
+                    <ul>
+                        <li><a class="font2 black ease" href="/Scribbles">Scribbles</a></li>
+                        <li><a class="font2 black ease" href="/Kids-Rings">Kids Rings</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="sub-collapser" href="">collaborations</a>
+                    <ul>
+                        <li><a class="font2 black ease" href="/The-Mother-Load-Project">The Motherload Project</a></li>
+                        <li><a class="font2 black ease" href="#wannabe">Wannabe</a></li>
+                        <li><a class="font2 black ease" href="#petite">Petite Show</a></li>
+                        <li><a class="font2 black ease" href="#merger">The Merger</a></li>
+                        <li><a class="font2 black ease" href="#trestle">Trestle Designs</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="sub-collapser" href="">about</a>
+                    <ul>
+                        <li><a class="font2 black ease" href="#about">my bio</a></li>
+                        <li><a class="font2 black ease" href="#contact">contact me</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+        <div class="mastwrap">
+     
+            @RenderBody()
+
+            <footer>
+                <div class="content-wrapper">
+                    <div class="float-left">
+                        <p>&copy; @DateTime.Now.Year - Natalie Macellaio - Metal Artist</p>
+                    </div>
+                </div>
+            </footer>
+        </div>
+
+            <!-- @Scripts.Render("~/bundles/jquery")
+        @RenderSection("scripts", required: false)-->
+
+        <script src="~/javascripts/libs/jquery.min.js" type="text/javascript"></script>
+        <script src="~/javascripts/libs/jquery.easing.1.3.js" type="text/javascript"></script>
+        <script src="~/bootstrap/js/bootstrap.js" type="text/javascript"></script>
+        <!--<script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script>-->
+        <script src="~/javascripts/libs/retina.js" type="text/javascript"></script>
+        <script src="~/javascripts/libs/device.min.js" type="text/javascript"></script>
+        <script src="~/javascripts/libs/jquery.slimmenu.min.js" type="text/javascript"></script>
+        <script src="~/javascripts/libs/classie.js" type="text/javascript"></script>
+        <script src="~/javascripts/libs/jquery.touchSwipe.js" type="text/javascript"></script>
+        <script src="~/javascripts/libs/equalheights.js" type="text/javascript"></script>
+        <script src="~/javascripts/libs/isotope.js" type="text/javascript"></script>
+        <script src="~/javascripts/libs/venobox.min.js" type="text/javascript"></script>
+        <script src="~/javascripts/libs/jquery.bxslider.min.js" type="text/javascript"></script>
+        <script src="~/javascripts/custom/navmenu-init.js" type="text/javascript"></script>
+        <script src="~/javascripts/custom/equalheights-init.js" type="text/javascript"></script>
+        <script src="~/javascripts/custom/isotope-init.js" type="text/javascript"></script>
+        <script src="~/javascripts/custom/venobox-init.js" type="text/javascript"></script>
+        <script src="~/javascripts/custom/main.js" type="text/javascript"></script>
+        <script src="~/javascripts/custom/form-validation.js" type="text/javascript"></script>
+        <script>
+                $(document).ready(function () {
+                    $('.bxslider').bxSlider({
+                        preloadImages: 'visible',
+                        touchEnabled: true,
+                        responsive: true,
+                        pager: false,
+                        controls: true
+                    });
+                });
+        </script>
+</body> 
 </html>
