added about and contact

--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -61,5 +61,129 @@
     </div>
 </section>
 
+<!-- About Section -->
+<section class="page-section" id="about">
+    <div class="container">
+        <div class="row">
+            <article class="col-md-6 about-content-split text-center common-pad softwhite-bg">
+                <div class="valign">
+                    <h1 class="black font5 promo-caps">Natalie Macllaio <span class="color-bg black">MFA</span> metal sculptor</h1>
+                </div>
+            </article>
+            <article class="col-md-6 about-content-split text-left common-pad white-bg">
+                <h3 class="sub-heading font2 black">Artist Statement</h3>
+                <p class="dark">
+                    My work marries a functional, aesthetic, and conceptual approach to metal. She
+                    works with concepts of adornment to create works that use the body to engage in
+                    conversations that draw directly from her personal life. !
+                </p><p>
+                    “I was trained as a jeweler years ago, which brought me to understand the intricacies
+                    of creating work that is personal to each person wearing it and expresses parts of their
+                    life. The choice to work with precious metals has been because of their inherent
+                    strengths and weaknesses. I value silver, both for its culturally relevant quality and for
+                    its beauty. I employ copper for its strength and abundance. I am, after all, interested in
+                    creating something beautiful and desirable. As I continue to explore these personal
+                    narratives through these metals, themes that relate to my life as a mother begin to
+                    come through. My initial interest in small, intimate works, is finding a new source of
+                    expression that allows me to create intimate pieces that explore the relationships I have
+                    to my children.”
+                </p>
+
+
+                <!--        <p>
+                    Many years ago, I became interested in the relationship and similarities between humans and the things that humans perceive as being infectious.  Influenced by a nasty roach infestation in an ill-advised apartment choice, I was first horrified, then fascinated by the resilience of these creatures.  It occurred to me that these creatures share a tenacity for survival and structure.  This influenced a body of work that has remained at the core of my practice.
+                    Extrapolating human culture on a macro scale, it seemed to me that absent of human emotions and inflection, our own culture exists as a sort of infestation.  Over a long enough time span, our building, tearing down, and rebuilding creates a history...a carcass that can be just as interesting as the culture behind it...as is the case with roaches.  So, in this vein, I decided to look deeper into this history.
+
+                    With that, it seemed that the only real individuality was in the flaws.  Cracks...the most basic of flaws, have their own depth, length and integrity.  At the heart of it, the cracks are all that is unique.  Cracks show age.  They can hint at stress points and loose narratives.  They can give clues to lapses in craftsmanship and structural integrity.  They, in essence, are the story.
+                </p><p>
+                                            I have chosen to work with precious metals because of their innate strengths and weaknesses.  I value silver, both for its culturally relevant quality, and for its beauty.  I employ copper for its strength and abundance.  I am, after all, interested in creating something beautiful and desirable.  I have meticulously created “flaws” in these materials.  I use the perception of beauty and strength to juxtapose these “flaws” and make them more apparent and salient.
+                                        </p><p>
+                                            While the cracks in the concrete on the street or in my apartment or on a tombstone are the source of inspiration, I am hoping that by bringing them deliberately to the fore by “crafting the crack”, I am making a statement about the most overlooked source of beauty in humanity...our flaws.
+                                            </p>-->
+
+                <h3 class="sub-heading font2 black add-top-half">Profiles</h3>
+                <ul class="profile-list">
+                    <li>
+                        <a href="#">Download Biography and Exhibits</a>
+                    </li>
+
+                </ul>
+            </article>
+        </div>
+
+        <!--     <div class="row">
+             <article class="col-md-4 white-bg stats-block text-center">
+                 <img alt="" title="" src="images/icons/1.png" />
+                 <h1 class="stats-count font1 black">203</h1>
+                 <h3 class="sub-heading font2 dark">Clients</h3>
+             </article>
+             <article class="col-md-4 color-bg stats-block text-center">
+                 <img alt="" title="" src="images/icons/2.png" />
+                 <h1 class="stats-count font1 black">1K+</h1>
+                 <h3 class="sub-heading font2 dark">Projects</h3>
+             </article>
+             <article class="col-md-4 softwhite-bg stats-block text-center">
+                 <img alt="" title="" src="images/icons/3.png" />
+                 <h1 class="stats-count font1 black">374</h1>
+                 <h3 class="sub-heading font2 dark">Apps</h3>
+             </article>
+         </div> -->
+
+    </div>
+</section>
+
+<!-- Contact Section -->
+<section class="page-content" id="contact">
+    <div class="container">
+        <div class="row">
+            <article class="col-md-6 contact-content-split fullheight text-left common-pad pad-top pad-bottom">
+                <div class="contact-form-wrap valign">
+                    <h3 class="sub-heading font2 black">Send Message</h3>
+
+                    <div class="contact-item pad-common ">
+                        <div class="alert alert-error error " id="fname">
+                            <p>Name must not be empty</p>
+                        </div>
+                        <div class="alert alert-error  error" id="fmail">
+                            <p>Please provide a valid email</p>
+                        </div>
+                        <div class="alert alert-error  error" id="fmsg">
+                            <p>Message should not be empty</p>
+                        </div>
+                        <form name="myform" id="contactForm" action="sendcontact.php" enctype="multipart/form-data" method="post">
+                            <article>
+                                <input type="text" placeholder="Your Name" id="name" name="name" size="100" class="border-form">
+                            </article>
+                            <article>
+                                <input type="text" placeholder="Valid email ID" name="email" id="email" size="30" class="border-form">
+                            </article>
+                            <article>
+                                <textarea placeholder="Your Message" name="message" cols="40" rows="3" id="msg" class="border-form"></textarea>
+                                <div class="btn-wrap  text-left">
+                                    <button class="btn btn-eight btn-eight-dark" id="submit" name="submit" type="submit">Send Message</button>
+                                </div>
+                            </article>
+                        </form>
+                    </div>
+                </div>
+                <!-- contact-form-wrap:ends -->
+            </article>
+
+            <article class="col-md-6 contact-content-split fullheight text-center common-pad white-bg">
+                <div class="valign">
+                    <h1 class="black font5 promo-caps">Natalie Macellaio<br /><span class="color-bg black"><a href="#">nataliemacellaio.artist@gmail.com</a></span></h1>
+                    <!-- social icons-->
+                    <ul class="social-wrap">
+                        <li><a href="#"><img alt="" title="" src="images/social/01.png" /></a></li>
+
+                    </ul>
+                </div>
+            </article>
+
+        </div>
+    </div>
+</section>
+
+
 
 
