--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -67,8 +67,8 @@
                     <li class="trigger-sub-nav">
                         <a class="main-nav-link" href="#">work</a>
                         <div class="sub-nav">
-                            <a href="/Scribbles">Scribbles</a>
-                            <a href="/Kids-Rings#kidsrings">Kids-Rings</a>
+                            <a href="~/Views/Home/Scribbles.html">Scribbles</a>
+                            <a href="#kidsrings">Kids-Rings</a>
                         </div>
                     </li>
                     <li class="trigger-sub-nav">
