--- a/Sandbox/Sandbox/Views/Home/TheMotherLoadProject.cshtml
+++ b/Sandbox/Sandbox/Views/Home/TheMotherLoadProject.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Natalie Macellaio | The Motherload Project";
 }
  
-<section class="page-section" style="display:none;" id="motherload">
+<section class="page-section" id="motherload">
     <div class="container">
         <div class="row">
 
@@ -10,8 +10,7 @@
                 <div class="row">
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
-                            <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black "></span></p>
+                            <div class="showcase-single-item-inner text-left">                                
                                 <h2 class="black add-top-quarter"><span>The Mother Load Project</span> A network of professional artists, who are also mothers</h2>
                                 <h5 class="font3 black"><a href="http://www.themotherload.org/" target="_blank">www.themotherload.org</a></h5>
                                 <h4 class="font5 dark">Founded by artists and mothers Lesli Robertson and Natalie Macellaio</h4>
