--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
                 <!-- start : works-item-scribbles -->
                 <div class="works-item works-item-one-third zoom">
                     <img alt="scribbles collection" class="img-responsive" src="~/images/scribbles/scrib-01.jpg" />
-                    <a class="venobox" data-overlay="#ca294b" data-gall="portfolio-gallery" data-type="inline" href="~/Views/Scribbles.cshtml">
+                    <a class="venobox" data-overlay="#ca294b" data-gall="portfolio-gallery" data-type="iframe" href="~/Scribbles">
                         <div class="works-item-inner valign">
                             <h3 class="black">New Work</h3>
                             <p class="white"><span class="black-bg">Scribbles</span></p>
@@ -20,7 +20,7 @@
                 <!-- start : works-item -->
                 <div class="works-item works-item-one-third zoom">
                     <img alt="kids rings collection" class="img-responsive" src="~/images/kidsrings/kring-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="inline" href="~/#kids-rings">
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Kids-Rings">
                         <div class="works-item-inner valign">
                             <h3 class="black">New Work</h3>
                             <p class="white"><span class="black-bg">Kids Rings</span></p>
@@ -42,7 +42,7 @@
                 <!-- start : works-item the motherload project-->
                 <div class="works-item works-item-one-third zoom">
                     <img alt="Collaborations" title="The Motherload Project" class="img-responsive" src="~/images/motherload/motherload-02.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" data-slide-index="#motherload" href="~/Views/Home/TheMotherLoadProject.cshtml">
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" data-slide-index="#motherload" href="~/The-Mother-Load-Project">
                         <div class="works-item-inner valign">
                             <h3 class="black">Collaborations</h3>
                             <p class="white"><span class="black-bg">The Motherload Project</span></p>
