--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -61,20 +61,20 @@
                 <ul class="main-nav-menu main-nav-menu-effect">
 
                     <li class="trigger-sub-nav">
-                        <a class="main-nav-link" href="/Index">home</a>
+                        <a class="main-nav-link" href="~/Index">home</a>
                     </li>
 
                     <li class="trigger-sub-nav">
                         <a class="main-nav-link" href="#">work</a>
                         <div class="sub-nav">
-                            <a href="~/Views/Home/Scribbles.html">Scribbles</a>
-                            <a href="#kidsrings">Kids-Rings</a>
+                            <a href="~/Scribbles">Scribbles</a>
+                            <a href="~/Kids-Rings">Kids-Rings</a>
                         </div>
                     </li>
                     <li class="trigger-sub-nav">
                         <a class="main-nav-link" href="#">collaborations</a>
                         <div class="sub-nav">
-                            <a href="/The-Mother-Load-Project">The Motherload Project</a>
+                            <a href="~/The-Mother-Load-Project">The Motherload Project</a>
                             <a href="#wannabe">Wannabe</a>
                             <a href="#petite">Petite Show</a>
                             <a href="#merger">The Merger</a>
