--- a/Sandbox/Sandbox/stylesheets/main.css
+++ b/Sandbox/Sandbox/stylesheets/main.css
@@ -1,46 +1,12 @@
-/*MAIN.CSS*/
-/*-------------------------------------------------------------------------------------------------------------------------------*/
-/*This is main CSS file that contains custom style rules used in this template*/
-/*-------------------------------------------------------------------------------------------------------------------------------*/
-/* Template Name: EIGHT.*/
-/* Version: 1.0 Initial Release*/
-/* Build Date: 02nd Sep 2014*/
-/* Author: Designova.*/
-/* Website: http://www.designova.net */
-/* Copyright: (C) 2014 */
-/*-------------------------------------------------------------------------------------------------------------------------------*/
-
-
-/*--------------------------------------------------------*/
-/* TABLE OF CONTENTS: */
-/*--------------------------------------------------------*/
-/* 01 - LAYOUT INITIALIZATION & COLOR PRESETS */
-/* 02 - HEADER, INTRO & NAVIGATION */
-/* 03 - COMMON ELEMENTS & TYPOGRAPHY */
-/* 04 - PAGES & SECTIONS SETUP*/
-/* 05 - FOOTER*/
-
-
-/*-------------------------------------------------------------------------------------------------------------------------------*/
-/* 01 - LAYOUT INITIALIZATION & COLOR PRESETS */
-/*-------------------------------------------------------------------------------------------------------------------------------*/
-body
-{
-    overflow-x: hidden; 
-}
-body{
-	font-weight:300;
+body{overflow-x: hidden; }
+body{font-weight:300;
 	/*overflow-x:hidden !important; */
 }
-
-a, a:hover, a:focus{
-	text-decoration: none;
+a, a:hover, a:focus{text-decoration: none;
 }
-a:focus { 
-    	outline: none; 
+a:focus { outline: none; 
 }
-.animated{
-	visibility: hidden;
+.animated{visibility: hidden;
 }
 .ease{
 	-webkit-transition: all .4s ease-in-out;
@@ -76,8 +42,6 @@ h1,h2,h3,h4,h5,h6{
 		max-width: 960px;
 	}
 }
-/*Common Spacing and Padding*/
-
 .page-section{
 	padding: 70px 0;
 }
