added logo, black color change

--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -138,7 +138,7 @@
 
             <footer>
                 <div class="content-wrapper">
-                    <div class="float-left">
+                    <div class="float-right">
                         <p>&copy; @DateTime.Now.Year - Natalie Macellaio - Metal Artist</p>
                     </div>
                 </div>
