--- a/Sandbox/Sandbox/less/color.less
+++ b/Sandbox/Sandbox/less/color.less
@@ -1,5 +1,5 @@
-@color:#FFF85F;
-@colorRGBA:rgba(255,248,95,0.8);
+@color:#BD8CBF;/*light purple*/
+@colorRGBA :rgba(189,140,191,0.8); 
 
 @white:#FFFFFF;
 @softwhite:#FAFAFA;
@@ -7,11 +7,11 @@
 @silver:#CCCCCC;
 
 @dark:#888888;
-@black:#121214;
+/*@black:#121214;*/
+@black:#61559f;
 
 @darkTrans:rgba(0,0,0,0.4);
 @whiteTrans:rgba(255,255,255,0.4);
-
 
 .white{
 	color:@white;
