cleaned main.css

--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
                 <!-- start : works-item-scribbles -->
                 <div class="works-item works-item-one-third zoom">
                     <img alt="scribbles collection" class="img-responsive" src="~/images/scribbles/scrib-01.jpg" />
-                    <a class="venobox" data-overlay="#ca294b" data-gall="portfolio-gallery" data-type="iframe" href="~/Scribbles">
+                    <a class="venobox" data-overlay="#BD8CBF" data-gall="portfolio-gallery" data-type="iframe" href="~/Scribbles">
                         <div class="works-item-inner valign">
                             <h3 class="black">New Work</h3>
                             <p class="white"><span class="black-bg">Scribbles</span></p>
