--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -137,7 +137,7 @@
             @RenderBody()
 
             <footer>
-                <div class="content-wrapper">
+                <div class="add-top-quarter">
                     <div class="float-right">
                         <p>&copy; @DateTime.Now.Year - Natalie Macellaio - Metal Artist</p>
                     </div>
