style side nav bar

--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{ 
     ViewBag.Title = "Natalie Macellaio | Metal Sculptor";
 }
-<section class="intro-02-wrap page-section featured" id="home">
+<section class="intro-02-wrap page-section" id="home">
     <div class="container-fluid">
         <div class="row">
             <div id="works-container" class="works-container white-bg clearfix">
