--- a/Sandbox/Sandbox/stylesheets/slimmenu.css
+++ b/Sandbox/Sandbox/stylesheets/slimmenu.css
@@ -9,8 +9,8 @@
 }
 .menu-collapser {
     position: relative;
-    background-color: #FFF;
-    color: #444;
+    background-color: rgba(97,85,159,0.1);
+    color: #61559F;
     width: 100%;
     height: 48px;
     line-height: 48px;
@@ -19,7 +19,7 @@
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 2px;
-    padding: 0 18px;    
+    padding: 0 18px;   
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -42,7 +42,6 @@
     -ms-transform: translate(0, -50%);
     -moz-transform: translate(0, -50%);
     -webkit-transform: translate(0, -50%);
-
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box
@@ -70,14 +69,14 @@ ul.slimmenu {
 ul.slimmenu li {
     position: relative;
     display: inline-block;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.80);
 }
 ul.slimmenu > li { margin-right: -5px; }
 ul.slimmenu > li:first-child { border-left: 0 }
 ul.slimmenu > li:last-child { margin-right: 0 }
 ul.slimmenu li a {
     display: block;
-    color: #666;
+    color: #8393ca;
     padding: 12px 64px 12px 16px;
     font-family: 'Montserrat', sans-serif;
     font-size: 10px;
@@ -102,7 +101,7 @@ ul.slimmenu li ul {
     margin: 0;
     list-style-type: none;
 }
-ul.slimmenu li ul li { background-color: #fcfcfc; padding-left: 20px; }
+ul.slimmenu li ul li { background-color: rgba(255, 255, 255, 0.80); padding-left: 20px; }
 ul.slimmenu li > ul {
     display: none;
     position: absolute;
