--- a/Sandbox/Sandbox/stylesheets/venobox.css
+++ b/Sandbox/Sandbox/stylesheets/venobox.css
@@ -1,11 +1,9 @@
-/* ------ venobox.css --------*/
 .vbox-overlay *, .vbox-overlay *:before, .vbox-overlay *:after{
     -webkit-backface-visibility: hidden;
     -webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
 body{
     -webkit-overflow-scrolling:touch;
 }
-/* ------- overlay: change here background color and opacity ----- */
 .vbox-overlay{
     background: #fff; 
     width: 100%;
@@ -20,12 +18,10 @@ body{
     -moz-transition: opacity .25s ease-in-out;
     -webkit-transition: opacity .25s ease-in-out;
 }
-
 .custom-overlay {
     width: 600px;
     display: block !important;
     z-index: 999;
-
 }
 .custom-overlay-6  {
     width:480px;
@@ -214,7 +210,7 @@ body{
     height: 40px;
     padding: 10px 20px 10px 0;
     display: block;
-    background: url(../images/venobox/close.gif) no-repeat #eee;
+    background: url(../images/venobox/close.gif) no-repeat;
     background-position:10px center;
     color: #fff;
     text-indent: -100px;
@@ -270,14 +266,13 @@ body{
     line-height: 39px;
     font-size: 32px;
     padding: 12px 10px;
-    background: #fff;
+   /* background: #fff;*/
     display: none;
     font-weight: 200;
 }
 /* ------- inline window ------ */
 .vbox-inline{
     width: 100%;
-   /*width: 100%;*/
     height: 315px;
     height: auto;
     padding: 10px;
@@ -286,7 +281,6 @@ body{
     margin: 0 auto;
   /*  overflow: auto;*/
 }
-
 /* ------- Video & iFrames window ------ */
 .venoframe{
     border: none;
@@ -309,7 +303,6 @@ body{
     .vbox-inline{
         width: 100%;
     }
-
     .venoframe{
         width: 100%;
         height: 260px;
