added new layout for iframe

--- a/Sandbox/Sandbox/Views/Home/Scribbles.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Scribbles.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿@{  Layout = "~/Views/Shared/_InternalPageLayout.cshtml";
     ViewBag.Title = "Natalie Macellaio | Scribbles";
 }
 
@@ -27,12 +27,21 @@
                     </article>
                 </div>
                 <div class="row showcase-thumb-strip">
-                    <article class="col-md-12 col-md-push-1">
-                        <img alt="Natalie Macellaio - Purple Scribble" title="Purple Scribble" class="img-responsive custom-overlay" src="images/scribbles/scrib-01.jpg" />
-                        <img alt="Natalie Macellaio - Yellow and Blue Scribble" title="Yellow and Blue Scribble" class="img-responsive custom-overlay" src="images/scribbles/scrib-02.jpg" />
-                        <img alt="Natalie Macellaio - Blues Scribble" title="Blues Scribble" class="img-responsive custom-overlay" src="images/scribbles/scrib-03.jpg" />
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Purple Scribble" title="Purple Scribble" class="img-responsive custom-overlay" src="../images/scribbles/scrib-01.jpg" />
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Yellow and Blue Scribble" title="Yellow and Blue Scribble" class="img-responsive custom-overlay" src="../images/scribbles/scrib-02.jpg" />
                     </article>
                 </div>
+                <div class="row showcase-thumb-strip zoom">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Blues Scribble" title="Blues Scribble" class="img-responsive custom-overlay" src="../images/scribbles/scrib-03.jpg" />
+                    </article>
+                    <article class="col-md-6">
+
+                    </article>
+                  </div>
             </article>
         </div>
     </div>
