--- a/Sandbox/Sandbox/Views/Home/TheMotherLoadProject.cshtml
+++ b/Sandbox/Sandbox/Views/Home/TheMotherLoadProject.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿@{  Layout = "~/Views/Shared/_InternalPageLayout.cshtml";
     ViewBag.Title = "Natalie Macellaio | The Motherload Project";
 }
  
