--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -1,23 +1,19 @@
-﻿@{ 
+﻿@{  Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Natalie Macellaio | Metal Sculptor";
 }
 <section class="intro-02-wrap page-section" id="home">
     <div class="container-fluid">
         <div class="row">
             <div id="works-container" class="works-container white-bg clearfix">
-
-                <!-- start : works-item-scribbles -->
                 <div class="works-item works-item-one-third zoom">
                     <img alt="scribbles collection" class="img-responsive" src="~/images/scribbles/scrib-01.jpg" />
-                    <a class="venobox" data-overlay="#BD8CBF" data-gall="portfolio-gallery" data-type="iframe" href="~/Scribbles">
+                    <a class="venobox" data-gall="portfolio-gallery" data-overlay="#BD8CBF" data-type="iframe" href="~/Scribbles">
                         <div class="works-item-inner valign">
                             <h3 class="black">New Work</h3>
                             <p class="white"><span class="black-bg">Scribbles</span></p>
                         </div>
                     </a>
                 </div>
-                <!-- end : works-item-kidsrings -->
-                <!-- start : works-item -->
                 <div class="works-item works-item-one-third zoom">
                     <img alt="kids rings collection" class="img-responsive" src="~/images/kidsrings/kring-01.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Kids-Rings">
@@ -27,8 +23,6 @@
                         </div>
                     </a>
                 </div>
-                <!-- end : works-item -->
-                <!-- start : works-item  -->
                 <div class="works-item works-item-one-third zoom">
                     <img alt="New Work" class="img-responsive" src="~/images/scribbles/scrib-02.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" title="Yellow and Blue" href="~/images/scribbles/scrib-02.jpg">
@@ -38,8 +32,6 @@
                         </div>
                     </a>
                 </div>
-                <!-- end : works-item -->
-                <!-- start : works-item the motherload project-->
                 <div class="works-item works-item-one-third zoom">
                     <img alt="Collaborations" title="The Motherload Project" class="img-responsive" src="~/images/motherload/motherload-02.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" data-slide-index="#motherload" href="~/The-Mother-Load-Project">
@@ -49,25 +41,23 @@
                         </div>
                     </a>
                 </div>
-                <!-- end : works-item -->
+
 
 
 
             </div>
-            <!-- end : works-container -->
-
         </div>
-
     </div>
 </section>
 
-<!-- About Section -->
 <section class="page-section" id="about">
     <div class="container">
         <div class="row">
             <article class="col-md-6 about-content-split text-center common-pad softwhite-bg">
                 <div class="valign">
-                    <h1 class="black font5 promo-caps">Natalie Macllaio <span class="color-bg black">MFA</span> metal sculptor</h1>
+                    <img src="~/images/about/profile.jpg" />
+                    <h1 class="black font5 promo-caps">Natalie Macllaio </h1><h2 class="color">MFA metal sculptor</h2>
+                    
                 </div>
             </article>
             <article class="col-md-6 about-content-split text-left common-pad white-bg">
