--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -98,43 +98,43 @@
 
         </header>
 
-        @RenderBody()
+        <!-- mobile only navigation : starts -->
+        <nav class="mobile-nav hidden-lg">
+            <ul class="slimmenu">
+                <li>
+                    <a class="sub-collapser" href="~/Index">home</a>
+                </li>
+
+                <li>
+                    <a class="sub-collapser" href="">work</a>
+                    <ul>
+                        <li><a class="font2 black ease" href="~/Scribbles">Scribbles</a></li>
+                        <li><a class="font2 black ease" href="~/Kids-Rings">Kids Rings</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="sub-collapser" href="">collaborations</a>
+                    <ul>
+                        <li><a class="font2 black ease" href="~/The-Mother-Load-Project">The Motherload Project</a></li>
+                        <li><a class="font2 black ease" href="#wannabe">Wannabe</a></li>
+                        <li><a class="font2 black ease" href="#petite">Petite Show</a></li>
+                        <li><a class="font2 black ease" href="#merger">The Merger</a></li>
+                        <li><a class="font2 black ease" href="#trestle">Trestle Designs</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="sub-collapser" href="">about</a>
+                    <ul>
+                        <li><a class="font2 black ease" href="#about">my bio</a></li>
+                        <li><a class="font2 black ease" href="#contact">contact me</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
 
         <div class="mastwrap">
-            <!-- mobile only navigation : starts -->
-            <nav class="mobile-nav hidden-lg">
-                <ul class="slimmenu">
-                    <li>
-                        <a class="sub-collapser" href="~/Index">home</a>
-                    </li>
-
-                    <li>
-                        <a class="sub-collapser" href="">work</a>
-                        <ul>
-                            <li><a class="font2 black ease" href="~/Scribbles">Scribbles</a></li>
-                            <li><a class="font2 black ease" href="~/Kids-Rings">Kids Rings</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a class="sub-collapser" href="">collaborations</a>
-                        <ul>
-                            <li><a class="font2 black ease" href="~/The-Mother-Load-Project">The Motherload Project</a></li>
-                            <li><a class="font2 black ease" href="#wannabe">Wannabe</a></li>
-                            <li><a class="font2 black ease" href="#petite">Petite Show</a></li>
-                            <li><a class="font2 black ease" href="#merger">The Merger</a></li>
-                            <li><a class="font2 black ease" href="#trestle">Trestle Designs</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a class="sub-collapser" href="">about</a>
-                        <ul>
-                            <li><a class="font2 black ease" href="#about">my bio</a></li>
-                            <li><a class="font2 black ease" href="#contact">contact me</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
-
+            
+            @RenderBody()
 
 
 
@@ -153,7 +153,8 @@
         <script src="~/javascripts/libs/jquery.min.js" type="text/javascript"></script>
         <script src="~/javascripts/libs/jquery.easing.1.3.js" type="text/javascript"></script>
         <script src="~/bootstrap/js/bootstrap.js" type="text/javascript"></script>
-        <!--<script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script>-->
+        <script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script><!-- see if needed-->
+
         <script src="~/javascripts/libs/retina.js" type="text/javascript"></script>
         <script src="~/javascripts/libs/device.min.js" type="text/javascript"></script>
         <script src="~/javascripts/libs/jquery.slimmenu.min.js" type="text/javascript"></script>
