--- a/Sandbox/Sandbox/stylesheets/main.css
+++ b/Sandbox/Sandbox/stylesheets/main.css
@@ -1,6 +1,6 @@
 body{overflow-x: hidden; }
 body{font-weight:300;
-	/*overflow-x:hidden !important; */
+	overflow-x:hidden !important; 
 }
 a, a:hover, a:focus{text-decoration: none;
 }
@@ -43,7 +43,7 @@ h1,h2,h3,h4,h5,h6{
 	}
 }
 .page-section{
-	padding: 70px 0;
+	padding: 30px 0;
 }
 .separator-section{
 	padding: 100px 0;
@@ -678,7 +678,8 @@ h1,h2,h3,h4,h5,h6{
         }
  .showcase-single-item h2 > span{ 
  	text-transform: uppercase;
- 	font-weight: 600;
+ 	font-weight: 500;
+     letter-spacing: 4px;
         }
         .showcase-single-item h3{ 
         }
@@ -716,8 +717,9 @@ h1,h2,h3,h4,h5,h6{
 	font-style: italic;
 	padding: 3px;
 }
-.showcase-thumb-strip a{
-            -webkit-transition: all .4s ease-in-out;
+.showcase-thumb-strip img{
+     justify-content:center;       
+    -webkit-transition: all .4s ease-in-out;
                -moz-transition: all .4s ease-in-out;
                 -ms-transition: all .4s ease-in-out;
                  -o-transition: all .4s ease-in-out;
