added piercing and metal/resin

--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -24,6 +24,15 @@
                     </a>
                 </div>
                 <div class="works-item works-item-one-third zoom">
+                    <img alt="piercing pieces" class="img-responsive" src="~/images/piercing/piercing-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Piercing-Pieces">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">New Work</h3>
+                            <p class="white"><span class="black-bg">Piercing Pieces</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
                     <img alt="New Work" class="img-responsive" src="~/images/scribbles/scrib-02.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" title="Yellow and Blue" href="~/images/scribbles/scrib-02.jpg">
                         <div class="works-item-inner valign">
