change profile photo

--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
         <div class="row">
             <article class="col-md-6 about-content-split text-center common-pad softwhite-bg">
                 <div class="valign">
-                    <img src="~/images/about/profile.jpg" />
+                    <img src="~/images/about/profile-01.jpg" />
                     <h1 class="black font5 promo-caps">Natalie Macllaio </h1><h2 class="color">MFA metal sculptor</h2>
                     
                 </div>
