added bump, bulge, brood

--- a/Sandbox/Sandbox/Views/Home/Brood.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Brood.cshtml
@@ -12,7 +12,7 @@
                             <div class="showcase-single-item-inner text-left">
                                 <p class="font5"><span class="color-bg black ">Brood</span></p>
                                 <h2 class="black add-top-quarter"><span>Brood</span></h2>
-                                <h5 class="font3 black">2014</h5>
+                                <h5 class="font3 black">2007</h5>
                                 <h4 class="font5 dark">Brood</h4>
                             </div>
                         </div>
@@ -30,26 +30,17 @@
 
                 <div class="row showcase-thumb-strip zoom">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring" title="Fina's Ring" class="img-responsive custom-overlay-6 " src="images/kidsrings/kring-01.jpg" />
+                        <img alt="Natalie Macellaio - Brood-silver, resin" title="Brood-silver, resin" class="img-responsive custom-overlay-6" src="images/brood/brood-01.jpg" />
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring Detail" title="Fina's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-02.jpg" />
+                        <img alt="Natalie Macellaio - Brood-silver, resin" title="Brood-silver, resin - detail" class="img-responsive custom-overlay-6" src="images/brood/brood-02.jpg" />
                     </article>
                 </div>
                 <div class="row showcase-thumb-strip zoom">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring" title="Milo's Ring" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-03.jpg" />
+                        <img alt="Natalie Macellaio - Brood-silver, resin" title="Brood-silver, resin -detail2" class="img-responsive custom-overlay-6" src="images/brood/brood-03.jpg" />
                     </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring Detail" title="Milo's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-04.jpg" />
-                    </article>
-                </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-12 col-md-push-1 zoom">
-                        <img alt="Natalie Macellaio - Balloon Ring" title="Balloon Ring" class="img-responsive custom-overlay" src="images/kidsrings/kring-05.jpg" />
-
-                    </article>
-                </div>
+                    </div>
             </article>
         </div>
     </div>
