--- a/Sandbox/Sandbox/Views/Home/Bulge.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Bulge.cshtml
@@ -12,7 +12,7 @@
                             <div class="showcase-single-item-inner text-left">
                                 <p class="font5"><span class="color-bg black ">Bulge</span></p>
                                 <h2 class="black add-top-quarter"><span>bulge</span></h2>
-                                <h5 class="font3 black">2014</h5>
+                                <h5 class="font3 black">2007</h5>
                                 <h4 class="font5 dark">Bulge</h4>
                             </div>
                         </div>
@@ -25,31 +25,20 @@
                             </div>
                         </div>
                     </article>
-
-                </div>
-
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring" title="Fina's Ring" class="img-responsive custom-overlay-6 " src="images/kidsrings/kring-01.jpg" />
-                    </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring Detail" title="Fina's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-02.jpg" />
-                    </article>
                 </div>
                 <div class="row showcase-thumb-strip zoom">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring" title="Milo's Ring" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-03.jpg" />
+                        <img alt="Natalie Macellaio - Bulge - copper, resin 12x50x3" title="Bulge-3" class="img-responsive custom-overlay-6" src="images/bulge/bulge-01.jpg" />
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring Detail" title="Milo's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-04.jpg" />
+                        <img alt="Natalie Macellaio - Bulge-detail" title="Bulge-detail" class="img-responsive custom-overlay-6" src="images/bulge/bulge-02.jpg" />
                     </article>
                 </div>
                 <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-12 col-md-push-1 zoom">
-                        <img alt="Natalie Macellaio - Balloon Ring" title="Balloon Ring" class="img-responsive custom-overlay" src="images/kidsrings/kring-05.jpg" />
-
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Bulge-crawl" title="Bulge-crawl" class="img-responsive custom-overlay-6" src="images/bulge/bulge-03.jpg" />
                     </article>
-                </div>
+                    </div>
             </article>
         </div>
     </div>
