--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
                     </a>
                 </div>
                 <div class="works-item works-item-one-third zoom">
-                    <img alt="New Work" class="img-responsive" src="~/images/resinballs/resinballs-01.jpg" />
+                    <img alt="Resin and Metal - Resin balls" class="img-responsive" src="~/images/resinballs/resinballs-01.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" title="Resin Balls" href="~/Resin-Balls">
                         <div class="works-item-inner valign">
                             <h3 class="black">Resin and Metal</h3>
@@ -60,11 +60,29 @@
                     </a>
                 </div>
                 <div class="works-item works-item-one-third zoom">
-                    <img alt="piercing pieces" class="img-responsive" src="" />
+                    <img alt="Resin bump on Metal" class="img-responsive" src="~/images/bump/bump-01.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Bump">
                         <div class="works-item-inner valign">
                             <h3 class="black">Resin and Metal</h3>
                             <p class="white"><span class="black-bg">Bump</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="Resin Bulge on Metal" class="img-responsive" src="~/images/bulge/bulge-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Bulge">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Resin and Metal</h3>
+                            <p class="white"><span class="black-bg">Bulge</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="resin brood on post" class="img-responsive" src="~/images/brood/brood-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Brood">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Resin and Metal</h3>
+                            <p class="white"><span class="black-bg">Brood</span></p>
                         </div>
                     </a>
                 </div>
