--- a/Sandbox/Sandbox/Views/Home/Bump.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Bump.cshtml
@@ -12,8 +12,8 @@
                             <div class="showcase-single-item-inner text-left">
                                 <p class="font5"><span class="color-bg black ">bump</span></p>
                                 <h2 class="black add-top-quarter"><span>bump</span></h2>
-                                <h5 class="font3 black">2014</h5>
-                                <h4 class="font5 dark">bump</h4>
+                                <h5 class="font3 black">2005</h5>
+                                <h4 class="font5 dark">Bump</h4>
                             </div>
                         </div>
                     </article>
@@ -30,27 +30,16 @@
 
                 <div class="row showcase-thumb-strip zoom">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring" title="Fina's Ring" class="img-responsive custom-overlay-6 " src="images/kidsrings/kring-01.jpg" />
+                        <img alt="Natalie Macellaio - Bump-4" title="Bump-4" class="img-responsive custom-overlay-6" src="images/bump/bump-01.jpg" />
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring Detail" title="Fina's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-02.jpg" />
+                        <img alt="Natalie Macellaio - Bump-2" title="Bump-2" class="img-responsive custom-overlay-6" src="images/bump/bump-02.jpg" />
                     </article>
                 </div>
                 <div class="row showcase-thumb-strip zoom">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring" title="Milo's Ring" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-03.jpg" />
-                    </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring Detail" title="Milo's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-04.jpg" />
-                    </article>
-                </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-12 col-md-push-1 zoom">
-                        <img alt="Natalie Macellaio - Balloon Ring" title="Balloon Ring" class="img-responsive custom-overlay" src="images/kidsrings/kring-05.jpg" />
-
-                    </article>
-                </div>
-            </article>
+                        <img alt="Natalie Macellaio - Bump-side" title="Bump-side" class="img-responsive custom-overlay-6" src="images/bump/bump-03.jpg" />
+                     </article>              
         </div>
     </div>
 </section>
